<resources>
    <string name="app_name">Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Auth Flow Strings -->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_subtitle">Enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="email_icon">Email icon</string>
    <string name="success_icon">Success icon</string>

    <string name="email_sent_title">Check Your Email</string>
    <string name="email_sent_message">We\'ve sent a password reset link to your email address. Please check your inbox and follow the instructions.</string>
    <string name="didnt_receive_email">Didn\'t receive the email?</string>
    <string name="resend_email">Resend</string>
    <string name="mail_icon">Mail icon</string>

    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_subtitle">Please enter your new password below.</string>
    <string name="validating_token">Validating your reset link…</string>
    <string name="new_password_label">New Password</string>
    <string name="new_password_hint">Enter new password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_password_hint">Confirm new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="lock_icon">Lock icon</string>

    <string name="password_reset_success_title">Password Reset Successful</string>
    <string name="password_reset_success_message">Your password has been successfully reset. You can now login with your new password.</string>
</resources>