<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_guest_home">

    <fragment
        android:id="@+id/nav_guest_home"
        android:name="com.example.mobile.ui.guest.GuestHomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_guest_home">
        <action
            android:id="@+id/action_nav_guest_home_to_nav_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_nav_guest_home_to_nav_register"
            app:destination="@id/nav_register" />
    </fragment>

    <fragment
        android:id="@+id/adminRequestsFragment"
        android:name="com.example.mobile.ui.admin.AdminRequestsFragment"
        android:label="Requests"
        tools:layout="@layout/fragment_admin_requests" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.mobile.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
        <action
            android:id="@+id/action_nav_login_to_nav_forgot_password"
            app:destination="@id/nav_forgot_password" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.mobile.ui.register.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_nav_register_to_nav_register_verification"
            app:destination="@id/nav_register_verification" />
        <action
            android:id="@+id/action_nav_register_to_nav_login"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_guest_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_forgot_password"
        android:name="com.example.mobile.ui.auth.ForgotPasswordFragment"
        android:label="Forgot Password"
        tools:layout="@layout/fragment_forgot_password">
        <action
            android:id="@+id/action_nav_forgot_password_to_nav_forgot_password_sent"
            app:destination="@id/nav_forgot_password_sent" />
    </fragment>

    <fragment
        android:id="@+id/nav_forgot_password_sent"
        android:name="com.example.mobile.ui.auth.ForgotPasswordSentFragment"
        android:label="Forgot Password Sent"
        tools:layout="@layout/fragment_forgot_password_sent">
        <action
            android:id="@+id/action_nav_forgot_password_sent_to_nav_reset_password"
            app:destination="@id/nav_reset_password" />
    </fragment>

    <fragment
        android:id="@+id/nav_reset_password"
        android:name="com.example.mobile.ui.auth.ResetPasswordFragment"
        android:label="Reset Password"
        tools:layout="@layout/fragment_reset_password">
        <action
            android:id="@+id/action_nav_reset_password_to_nav_reset_password_success"
            app:destination="@id/nav_reset_password_success" />
    </fragment>

    <fragment
        android:id="@+id/nav_reset_password_success"
        android:name="com.example.mobile.ui.auth.ResetPasswordSuccessFragment"
        android:label="Reset Password Success"
        tools:layout="@layout/fragment_reset_password_success" />

    <fragment
        android:id="@+id/nav_register_verification"
        android:name="com.example.mobile.ui.auth.RegisterVerificationFragment"
        android:label="Verify Email"
        tools:layout="@layout/fragment_register_verification" />

    <fragment
        android:id="@+id/nav_driver_overview"
        android:name="com.example.mobile.ui.driver.DriverOverviewFragment"
        android:label="Driver Overview"
        tools:layout="@layout/fragment_driver_overview">
        <action
            android:id="@+id/action_nav_driver_overview_to_nav_ride_details"
            app:destination="@id/nav_ride_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_driver_history"
        android:name="com.example.mobile.ui.driver.DriverRideHistoryFragment"
        android:label="Ride History"
        tools:layout="@layout/fragment_driver_ride_history">
        <action
            android:id="@+id/action_nav_driver_history_to_nav_ride_details"
            app:destination="@id/nav_ride_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_ride_details"
        android:name="com.example.mobile.ui.driver.RideDetailsFragment"
        android:label="Ride Details"
        tools:layout="@layout/fragment_ride_details">
        <argument
            android:name="rideId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/nav_admin_dashboard"
        android:name="com.example.mobile.ui.admin.AdminDashboardFragment"
        android:label="Admin Dashboard"
        tools:layout="@layout/fragment_admin_dashboard" />

    <fragment
        android:id="@+id/nav_passenger_home"
        android:name="com.example.mobile.ui.passenger.PassengerHomeFragment"
        android:label="Passenger Home"
        tools:layout="@layout/fragment_passenger_home" />

    <fragment
        android:id="@+id/nav_admin_profile"
        android:name="com.example.mobile.ui.profile.UserProfileFragment"
        android:label="Admin Profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_user_profile"
        android:name="com.example.mobile.ui.profile.UserProfileFragment"
        android:label="User Profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_driver_profile"
        android:name="com.example.mobile.ui.profile.DriverProfileFragment"
        android:label="Driver Profile"
        tools:layout="@layout/fragment_driver_profile" />

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.example.mobile.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.example.mobile.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mobile.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mobile.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_admin_reports"
        android:name="com.example.mobile.ui.admin.AdminReportsFragment"
        android:label="Reports"
        tools:layout="@layout/fragment_admin_reports" />

    <fragment
        android:id="@+id/nav_admin_drivers"
        android:name="com.example.mobile.ui.admin.AdminDriversFragment"
        android:label="Drivers"
        tools:layout="@layout/fragment_admin_drivers" />

    <fragment
        android:id="@+id/nav_admin_pricing"
        android:name="com.example.mobile.ui.admin.AdminPricingFragment"
        android:label="Pricing"
        tools:layout="@layout/fragment_admin_pricing" />

    <fragment
        android:id="@+id/nav_admin_support"
        android:name="com.example.mobile.ui.support.SupportFragment"
        android:label="Support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_passenger_history"
        android:name="com.example.mobile.ui.passenger.PassengerHistoryFragment"
        android:label="Ride History"
        tools:layout="@layout/fragment_passenger_history" />

    <fragment
        android:id="@+id/nav_passenger_profile"
        android:name="com.example.mobile.ui.profile.UserProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_passenger_support"
        android:name="com.example.mobile.ui.support.SupportFragment"
        android:label="Support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_driver_support"
        android:name="com.example.mobile.ui.support.SupportFragment"
        android:label="Support"
        tools:layout="@layout/fragment_support" />
</navigation>